Bug #224313 --> crashes when clicking on mail/news accounts. Patch by Peter van der Beken. sr=dbaron